teste publicação no heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #file.path.in.name=./data/in/SLC0001-modelo.xml
 
 ##File properties PROMPT
-file.path.in.name=../data/in/SLC0001-modelo.xml
+file.path.in.name=./data/in/SLC0001-modelo.xml
 
 # H2
 spring.h2.console.enabled=true
