Adicionados logs, correção na busca pelo diretório origem do arquivo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-##File properties STS
-#file.path.in.name=./data/in/SLC0001-modelo.xml
+##File properties STS e HEROKU
+file.path.in.name=./data/in/SLC0001-modelo.xml
 
 ##File properties PROMPT
-file.path.in.name=./data/in/SLC0001-modelo.xml
+#file.path.in.name=../data/in/SLC0001-modelo.xml
 
 # H2
 spring.h2.console.enabled=true
