Alteração na porta do servidor.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ file.path.in.name=./data/in/SLC0001-modelo.xml
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+spring.h2.console.settings.web-allow-others=true
 
 # Datasource
 spring.datasource.url=jdbc:h2:mem:liquidacao_votacao?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC;DATABASE_TO_UPPER=false
